support hybrid events (#979)
* add new properties for hybrid events

* fix compilation errors

* rename db script to avoid clashes with main branch

* update tests

* fix typo

* drop view before changing event.format type

* create hybrid event

* enable check-in for hybrid events

* display online categories in hybrid events

* send the online ticket email if category can be accessed online
update ticket email

* update check-in process

* copy hybrid event

* front-end related modifications

* update frontend version

* fix NaN when price is not yet defined

* add access type selection when event format is "HYBRID"

* update event API to accept Event format and ticket access type